test/invalid/comment_slashplus_unfinished.d
//T error: comment_slashplus_unfinished.d:4:0:
//T error: Unexpected end of file.

/+ This is an unfinished comment
/+ With some nesting for good measure +/
